# teledump

./: .env-example  .gitignore  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  rust-toolchain.toml
.github/workflows/: build.yaml
entity/src/entities/: messages.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231027_132357_init.rs  m20231030_091220_create_binary_reference_expired.rs
nix/devshell/: flake-module.nix
nix/rust-overlay/: flake-module.nix
src/: bot.rs  config.rs  db.rs  main.rs
