[package]
name = "teledump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.0"

shellexpand = "3.1.0"

tokio = { version = "1.33.0", features = ["full"] }

grammers-client = { git = "https://github.com/ElXreno/grammers" }
grammers-session = { git = "https://github.com/ElXreno/grammers" }

mime = "0.3.17"

moka = { version = "0.12.1", features = ["future"] }
sea-orm = { version = "0.12.4", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }

anyhow = "1.0.75"
